--- a/composer.json
+++ b/composer.json
@@ -7,21 +7,20 @@
     "prefer-stable": true,
     "require": {
         "php": ">=7.4",
-        "drupal/core": "^9.2",
+        "drupal/core": "^9.3",
         "openeuropa/oe_corporate_site_info": "^1.0"
     },
     "require-dev": {
         "behat/behat": "^3.10",
         "composer/installers": "^1.11",
-        "composer/xdebug-handler": "^2.0",
-        "drupal/core-composer-scaffold": "^9.2",
-        "drupal/core-dev": "^9.2",
+        "drupal/core-composer-scaffold": "^9.3",
+        "drupal/core-dev": "^9.3",
         "drupal/config_devel": "^1.2",
         "drupal/ctools": "^3.7",
         "drupal/drupal-extension": "^4.0",
         "drupal/token": "^1.10",
         "drush/drush": "^10.3",
-        "egulias/email-validator": "^2.1.22 || ^3.0",
+        "fabpot/goutte": "^3.3",
         "openeuropa/behat-transformation-context" : "~0.1",
         "openeuropa/code-review": "^2.0",
         "openeuropa/task-runner-drupal-project-symlink": "^1.0-beta5",
@@ -29,11 +28,10 @@
         "phpspec/prophecy-phpunit": "^2"
     },
     "_readme": [
-        "Explicit lower version requirement of ctools due to Drupal core 9.2 compatibility.",
-        "Explicit requirement for egulias/email-validator due to https://www.drupal.org/project/drupal/issues/3061074#comment-14300579. It can be removed when Drupal core 9.2 support is droppped.",
+        "Explicit lower version requirement of ctools due to Drupal core 9.3 compatibility.",
+        "Explicit minimum version requirement for fabpot/goutte due to Drupal 9.3 compatibility.",
         "Explicit requirement of token module due to PHP7.4 compatbility.",
-        "Explicit requirement of behat module due to PHP8 compatibility.",
-        "Requiring composer/xdebug-handler until PHPMD 2.12 is released"
+        "Explicit requirement of behat module due to PHP8 compatibility."
     ],
     "scripts": {
         "post-install-cmd": "./vendor/bin/run drupal:site-setup",
