--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,14 @@
     "prefer-stable": true,
     "require": {
         "php": ">=8.0",
-        "drupal/core": "^9.4",
+        "drupal/core": "^9.4 || ^10",
         "openeuropa/oe_corporate_site_info": "^1.0.0-alpha6"
     },
     "require-dev": {
         "behat/behat": "^3.10",
         "composer/installers": "^1.11",
         "drupal/config_devel": "^1.2",
-        "drupal/core-composer-scaffold": "^9.4",
+        "drupal/core-composer-scaffold": "^9.4 || ^10",
         "drupal/ctools": "^3.7",
         "drupal/drupal-extension": "dev-master as 4.0",
         "drupal/token": "^1.10",
