--- a/modules/oe_corporate_blocks_demo/oe_corporate_blocks_demo.info.yml
+++ b/modules/oe_corporate_blocks_demo/oe_corporate_blocks_demo.info.yml
@@ -1,5 +1,5 @@
 name: OpenEuropa Corporate blocks Demo
-core_version_requirement: ^9.4
+core_version_requirement: ^9.4 || ^10
 type: module
 
 config_devel:
