--- a/config/install/oe_corporate_blocks.ec_data.footer.yml
+++ b/config/install/oe_corporate_blocks.ec_data.footer.yml
@@ -47,7 +47,7 @@ class_navigation:
     label: Statistics
   -
     href: 'https://ec.europa.eu/commission/presscorner/home/en'
-    label: News
+    label: 'Press Corner'
   -
     href: 'https://commission.europa.eu/events_en'
     label: Events
