--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "openeuropa/oe_multilingual": "^1.13",
         "openeuropa/task-runner-drupal-project-symlink": "^1.0-beta6",
         "phpspec/prophecy-phpunit": "^2",
+        "phpunit/phpunit": "^9.0",
         "symfony/phpunit-bridge": "^6.0",
         "symfony/validator": "~v4.4.48 || ~v6.2.5"
     },
@@ -60,6 +61,7 @@
             }
         },
         "_readme": [
+            "Limit phpunit to 9.x until Drupal 10 adds full support.",
             "Explicit requirement of symfony/phpunit-bridge to replace drupal/core-dev testing classes and traits.",
             "Using symfony/validator v6.2.5 for D10 like core-recommended does because 6.3 breaks BC with the signature changes to the ExecutionContextInterface."
         ]
