--- a/composer.json
+++ b/composer.json
@@ -6,24 +6,23 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.0",
-        "drupal/core": "^9.4 || ^10",
+        "php": ">=8.1",
+        "drupal/core": "^10",
         "openeuropa/oe_corporate_site_info": "^1.0.0-alpha7"
     },
     "require-dev": {
         "composer/installers": "^1.11",
         "drupal/config_devel": "^1.9",
-        "drupal/core-composer-scaffold": "^9.4 || ^10",
+        "drupal/core-composer-scaffold": "^10",
         "drupal/drupal-extension": "^5.0",
-        "drush/drush": "^11.1",
+        "drush/drush": "^12",
         "openeuropa/behat-transformation-context": "^0.2",
         "openeuropa/code-review": "^2.0.0-alpha6",
         "openeuropa/oe_multilingual": "^1.13",
         "openeuropa/task-runner-drupal-project-symlink": "^1.0-beta6",
         "phpspec/prophecy-phpunit": "^2",
         "phpunit/phpunit": "^9.0",
-        "symfony/phpunit-bridge": "^6.0",
-        "symfony/validator": "~v4.4.48 || ~v6.2.5"
+        "symfony/phpunit-bridge": "^6.0"
     },
     "scripts": {
         "post-install-cmd": "./vendor/bin/run drupal:site-setup",
@@ -62,8 +61,7 @@
         },
         "_readme": [
             "Limit phpunit to 9.x until Drupal 10 adds full support.",
-            "Explicit requirement of symfony/phpunit-bridge to replace drupal/core-dev testing classes and traits.",
-            "Using symfony/validator v6.2.5 for D10 like core-recommended does because 6.3 breaks BC with the signature changes to the ExecutionContextInterface."
+            "Explicit requirement of symfony/phpunit-bridge to replace drupal/core-dev testing classes and traits."
         ]
     },
     "config": {
